--- a/MainApp/MainApp.csproj
+++ b/MainApp/MainApp.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\CrmDBLab\CrmDBLab.csproj" />
+      <ProjectReference Include="..\Services\Services.csproj" />
     </ItemGroup>
 
 </Project>
